fix: update to jdk17 and springboot 3.x
Change-Id: I83527f26af141d51566f447f10a6137d0e6780df